2013-05-28  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/ItkImFilter.cpp: (1.3.0)
	* matlab/ItkToolbox/itk_imfilter.m: (0.7.2)
	* matlab/test/test_itk_imfilter.m: (0.4.0)

	- Add filter VotingBinaryIterativeHoleFillingImageFilter, as
	requested by Peter Thalmann.

	* matlab/MatlabExportFilter.h: (0.2.0)
	* matlab/MatlabExportFilter.hxx: (0.2.0)

	- Add CopyItkImageToMatlab(): function to allocate memory in
	Matlab and copy an ITK filter output to this buffer. In principle,
	it's better to use GraftItkImageOntoMatlab() than
	CopyItkImageToMatlab(), because then ITK and Matlab share the same
	memory buffer, but the former approach does not work with some
	filters.

2013-05-27  Ramon Casero  <rcasero@gmail.com>

	* Rename matlab/PointsToolbox/scimat_dmatrix_livewire.m as
	matlab/PointsToolbox/scimat_dmatrix_imgeodesic.m:
	* Add matlab/test/test_scimat_dmatrix_imgeodesic.m: (0.1.0)

	- It's not really a livewire, and image-geodesic expresses better
	what it does.

	* Add matlab/PointsToolbox/scimat_dmatrix_livewire.m: (0.1.0)

	- SCIMAT_DMATRIX_LIVEWIRE Compute a distance/adjacency matrix for
	a set of scattered points using the image intensity to approximate
	the geodesics

	* matlab/FiltersToolbox/im2dmatrix.cpp: (0.2.3)

	- Fix bug. Neighbours were inconsistently taken into account, but
	not recorded in jc if their intensity value is 0. Now all
	neighbours are taken into account, and if their distance*mean
	intensity==0, it's still considered a connection. Apparently,
	sparse matrices in Matlab consider missing elements as an implicit
	0, but an explicit 0 in a sparse matrix is not a nonzero element.

2013-03-14  Ramon Casero  <rcasero@gmail.com>

	* matlab/ThirdPartyToolbox/dijkstra.m: (0.3.0)
	* matlab/ThirdPartyToolbox/dijkstra.cpp: (0.3.0)
	* matlab/test/test_dijkstra.m: (0.3.0)

	- Add piggyback extension. The motivation is being able to find
	shortest-paths according to the intensities in a greyscale image,